exports[`test Renders Logo with link 1`] = `
<div
  className="logoContainer">
  <a
    href="/">
    <div
      className="responsive logo light">
      <div
        className="sr-only">
        test
      </div>
      <span
        aria-hidden="true"
        className="responsive starSpinner light"
        style={
          Object {
            "transform": "rotate(0deg)",
          }
        } />
    </div>
  </a>
</div>
`;

exports[`test Renders Logo without crashing 1`] = `
<div
  className="logoContainer">
  <div
    className="responsive logo dark">
    <div
      className="sr-only">
      test
    </div>
    <span
      aria-hidden="true"
      className="responsive starSpinner dark"
      style={
        Object {
          "transform": "rotate(0deg)",
        }
      } />
  </div>
</div>
`;
